@@ -45,7 +45,7 @@ public class S98FileFormat extends BaseFileFormat {
             music.converted = gd3.converted;
             music.notes = gd3.notes;
         } else {
-            music.title = String.format("(%s)", Path.getFileName(file));
+            music.title = "(%s)".formatted(Path.getFileName(file));
         }
         return Collections.singletonList(music);
     }
@@ -69,7 +69,7 @@ public class S98FileFormat extends BaseFileFormat {
             music.converted = gd3.converted;
             music.notes = gd3.notes;
         } else {
-            music.title = String.format("(%s)", Path.getFileName(ms.fileName));
+            music.title = "(%s)".formatted(Path.getFileName(ms.fileName));
         }
 
         musics.add(music);
