@@ -43,7 +43,7 @@ public class XGMFileFormat extends BaseFileFormat {
         music.notes = gd3.notes;
 
         if (music.title.isEmpty() && music.titleJ.isEmpty() && music.game.isEmpty() && music.gameJ.isEmpty() && music.composer.isEmpty() && music.composerJ.isEmpty()) {
-            music.title = String.format("(%s)", Path.getFileName(file));
+            music.title = "(%s)".formatted(Path.getFileName(file));
         }
         return Collections.singletonList(music);
     }
@@ -67,7 +67,7 @@ public class XGMFileFormat extends BaseFileFormat {
         music.notes = gd3.notes;
 
         if (music.title.isEmpty() && music.titleJ.isEmpty() && music.game.isEmpty() && music.gameJ.isEmpty() && music.composer.isEmpty() && music.composerJ.isEmpty()) {
-            music.title = String.format("(%s)", Path.getFileName(ms.fileName));
+            music.title = "(%s)".formatted(Path.getFileName(ms.fileName));
         }
 
         musics.add(music);
